[tool.poetry]
name = "icesat2-tracks"  # Required
version = "0.0.0"  # Required
description = "Tools to analyze wave tracks using icesat2 data"  # Optional
readme = "README.md" # Optional
license = "LICENSE.txt"
authors = ["Momme C. Hell <momme_hell@brown.edu>"]
keywords = ["earth observation", "icesat2"]  # Optional
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",


  # Pick your license as you wish
  #TODO
  #"License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.9"
piecewise_regression = "*"
numba  = "*"
xarray  = "*"
mpi4py  = "*"
icesat2-toolkit = "1.0.0.22"

[tool.poetry.group.dev.dependencies]
check-manifest = "*"

[tool.poetry.group.docs.dependencies]
coverage = "*"

[poetry.tool.scripts]
download = "icesat2_tracks.icesat2_tools_scripts.nsidc_icesat2_associated2:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
